--- a/contactanos.html
+++ b/contactanos.html
@@ -88,7 +88,7 @@
 
 <footer>
     <section class="pie-de-pagina">
-      <p>Argentina Turismo - © 2024 - Argentina Turismo - Versión 2.9.2.0</p>
+      <p>&copy; Argentina Turismo - © 2024 - Argentina Turismo - Versión 2.9.2.0</p>
     </section>
   </footer>
 
