--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 </div>
 
 <!--
-</div>                                                     IDEA ORIGINNAL - PANAMA 
+</div>                                                     IDEA ORIGINNAL 
 <div class="contenedor">
     <div class="bienvenido">
        <h2>Bienvenidos a</h2>
