--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Sedan+SC&display=swap" rel="stylesheet">
 </head>
 <body>
+
 <header>
 <nav class="nav">
     <div class="nav-contenedor">
@@ -49,11 +50,12 @@
     </div>
 </nav>
 </header>
-<div class="title-contenedor">
+
+<section class="title-contenedor">
     <div class="hijo-contenedor">
     <h1>¡Bienvenidos a Argentina!</h1>
     </div>
-</div>
+</section>
 
 <!--
 </div>                                                     IDEA ORIGINNAL 
@@ -70,7 +72,7 @@
 </div>                         
 -->
 
-<div id="carouselExampleCaptions" class="carousel slide">
+<section id="carouselExampleCaptions" class="carousel slide">
     <div class="carousel-indicators">
       <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
       <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -107,9 +109,9 @@
       <span class="carousel-control-next-icon" aria-hidden="true"></span>
       <span class="visually-hidden">Next</span>
     </button>
-  </div>
+</section>
 
-<div class="contenedor-b">
+<section class="contenedor-b">
     <div class="informacion">
 
         <p class="parrafo1">¡Bienvenido a Argentina, un país que cautiva con su diversidad cultural, paisajes impresionantes y pasión por la vida. 
@@ -132,7 +134,7 @@
         <p class="parrafo5">¡Descubre la magia de Argentina y déjate seducir por su encanto único!</p>
 
     </div>
-</div>
+</section>
     
 <footer>
   <section class="pie-de-pagina">
