--- a/atracciones-turisticas.html
+++ b/atracciones-turisticas.html
@@ -21,9 +21,9 @@
           <p class="viaja">Viaja mas</p>
       </div>
       <nav class="nav-container">
-          <a class="enlaces" href="index.html">Inicio</a>
-          <a class="enlaces" href="atracciones-turisticas.html">Atracciones turisticas</a>
-          <a class="enlaces" href="contactanos.html">Contactanos</a>
+          <a class="enlaces" href="index.html" target="_blank">Inicio</a>
+          <a class="enlaces" href="atracciones-turisticas.html" target="_blank">Atracciones turisticas</a>
+          <a class="enlaces" href="contactanos.html" target="_blank">Contactanos</a>
       </nav>
   </header>
 
