--- a/contactanos.html
+++ b/contactanos.html
@@ -10,6 +10,7 @@
     <link rel="icon" href="imagenes/icons8-argentina-48.png">
 </head>
 <body>
+
     <header>
         <div class="logo-container">
             <img src="imagenes/icons8-circular-argentina-48.png" alt="argentina" class="logo-img">
@@ -17,9 +18,9 @@
             <p class="viaja">Viaja mas</p>
         </div>
         <nav class="nav-container">
-            <a class="enlaces" href="index.html">Inicio</a>
-            <a class="enlaces" href="atracciones-turisticas.html">Atracciones turisticas</a>
-            <a class="enlaces" href="contactanos.html">Contactanos</a>
+            <a class="enlaces" href="index.html" target="_blank">Inicio</a>
+            <a class="enlaces" href="atracciones-turisticas.html" target="_blank">Atracciones turisticas</a>
+            <a class="enlaces" href="contactanos.html" target="_blank">Contactanos</a>
         </nav>
     </header>
 
@@ -46,7 +47,7 @@
                 <p>Luneas a viernes de 8am a 6pm</p>
             </div>
         </div>
-
+    </div>
 <section class="section-container">
 
     <form action="https://formspree.io/f/xleqvlab" method="post" class="diseño-form"> <!--El post sirve para ocultar los datos del cliente-->
