cambios clase de prueba

--- a/atracciones-turisticas.html
+++ b/atracciones-turisticas.html
@@ -97,7 +97,7 @@
 
 <footer>
    <div class="pie-de-pagina">
-     <p>&copy;Argentina Turismo - © 2024 - Argentina Turismo - Versión 2.9.2.0</p>
+     <p>&copy;Argentina Turismo - 2024 - Argentina Turismo - Versión 2.9.2.0</p>
    </div>
 </footer>
 
