--- a/contactanos.html
+++ b/contactanos.html
@@ -47,8 +47,8 @@
                 <p>Luneas a viernes de 8am a 6pm</p>
             </div>
         </div>
-    </div>
     
+
 <section class="section-container">
 
     <form action="https://formspree.io/f/xleqvlab" method="post" class="diseño-form"> <!--El post sirve para ocultar los datos del cliente-->
@@ -90,9 +90,9 @@
 
 <footer>
     <section class="pie-de-pagina">
-      <p>&copy; Argentina Turismo - © 2024 - Argentina Turismo - Versión 2.9.2.0</p>
+      <p>&copy; Argentina Turismo - 2024 - Argentina Turismo - Versión 2.9.2.0</p>
     </section>
-  </footer>
+</footer>
 
 
 
