--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Argetina Turismo</title>
@@ -138,7 +139,7 @@
     
 <footer>
   <section class="pie-de-pagina">
-    <p>&copy;Argentina Turismo - © 2024 - Argentina Turismo - Versión 2.9.2.0</p>
+    <p>&copy;Argentina Turismo - 2024 - Argentina Turismo - Versión 2.9.2.0</p>
   </section>
 </footer>
 
