diseño responsive parte 1

--- a/contactanos.html
+++ b/contactanos.html
@@ -8,6 +8,15 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="icon" href="imagenes/icons8-argentina-48.png">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,500;1,500&family=Titan+One&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,200;1,200&family=Titan+One&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Raleway:ital,wght@0,200;1,200&family=Titan+One&display=swap" rel="stylesheet">
 </head> 
 <body>
   
@@ -58,22 +67,22 @@
     <section class="formulario">
 
         <nav class="nav-dudas">
-            <h1 class="dudas">Resuelva sus dudas</h1>
+            <h1 class="dudas">RESUELVA SUS DUDAS</h1>
         </nav>
 
         <div class="row align-items-center">
-            <div class="container-mail col-sm-4"><img src="imagenes/icons8-correo-25.png" alt="mail"> 
-                <h4 class="mail">Escribenos a</h4>
-                <p>viaja@argentinaturismo.com</p>
+            <div class="container-mail col-md-4"><img src="imagenes/icons8-correo-25.png" alt="mail"> 
+                <h4 class="item-padre">Escribenos a</h4>
+                <p class="item-hijo">viaja@argentinaturismo.com</p>
             </div> 
-            <div class="container-pagina col-sm-4"><img src="imagenes/icons8-monitor-25.png" alt="monitor">
-                <h4 class="pagina">Contacto por la pagina web</h4>
-                <p>Si lo prefiere puede rellenar el formulario de contacto y le contestaremos por email.</p>
+            <div class="container-pagina col-md-4"><img src="imagenes/icons8-monitor-25.png" alt="monitor">
+                <h4 class="item-padre">Contacto por la pagina web</h4>
+                <p class="item-hijo">Si lo prefiere puede rellenar el formulario de contacto y le contestaremos por email.</p>
             </div>
 
-            <div class="container-telefono col-sm-4"><img src="imagenes/icons8-featurephone-32.png" alt="telefono"> 
-                <h4 class="telefono">Horarios de atencion</h4>
-                <p>Luneas a viernes de 8am a 6pm</p>
+            <div class="container-telefono col-md-4"><img src="imagenes/icons8-featurephone-32.png" alt="telefono"> 
+                <h4 class="item-padre">Horarios de atencion</h4>
+                <p class="item-hijo">Luneas a viernes de 8am a 6pm</p>
             </div>
         </div>
     
