--- a/atracciones-turisticas.html
+++ b/atracciones-turisticas.html
@@ -87,7 +87,7 @@
 <div class="grid-container">
 
     <div class="contendor-img">
-         <img src="imagenes/cataratas iguazu.jpeg" alt="cataratas" class="cataratas">
+         <img src="imagenes/Como aproveitar a visita às Cataratas de Foz do Iguaçu - Central de Pousadas.jpeg" alt="cataratas" class="cataratas">
          <h5>Cataras del Iguazú, Argentina</h5>
     </div>
 
@@ -102,7 +102,7 @@
     </div>
 
     <div class="contendor-img1">
-         <img src="imagenes/el chalten.jpeg" alt="chalten" class="chalten" >
+         <img src="imagenes/Cerro Fitz Roy o Chaltén (Provincia de Santa Cruz, Argentina).jpeg" alt="chalten" class="chalten" >
          <h5>El chalten, Argentina</h5>
    </div>
 
@@ -114,6 +114,7 @@
      <p>&copy;Argentina Turismo - 2024 - Argentina Turismo - Versión 2.9.2.0</p>
    </div>
 </footer>
+
 
 <script src="contactanos.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
