--- a/atracciones-turisticas.html
+++ b/atracciones-turisticas.html
@@ -10,12 +10,12 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
-    <link rel="icon" href="imagenes/icons8-argentina-48.png">
+    <link rel="icon" href="imagenes/iconos/icons8-argentina-48.png">
 </head>
 <body>
 
 <header class="header">
-      <img src="imagenes/icons8-circular-argentina-48.png" alt="icon" class="logo-container">
+      <img src="imagenes/iconos/icons8-circular-argentina-48.png" alt="icon" class="logo-container">
   
   
       <button id="abrir" class="abrir-menu">
@@ -87,22 +87,22 @@
 <div class="grid-container">
 
     <div class="contendor-img">
-         <img src="imagenes/Como aproveitar a visita às Cataratas de Foz do Iguaçu - Central de Pousadas.jpeg" alt="cataratas" class="cataratas">
+         <img src="imagenes/Fotos carrousel-index/Como aproveitar a visita às Cataratas de Foz do Iguaçu - Central de Pousadas.jpeg" alt="cataratas" class="cataratas">
          <h5>Cataras del Iguazú, Argentina</h5>
     </div>
 
     <div class="contendor-img3">
-         <img src="imagenes/Salinas Grandes, Jujuy.jpeg" alt="salinas" class="salinas" >
+         <img src="imagenes/Fotos carrousel-index/Salinas Grandes, Jujuy.jpeg" alt="salinas" class="salinas" >
          <h5>Salinas, San Salvador de Jujuy</h5>
     </div>
 
     <div class="contendor-img2">
-         <img src="imagenes/glaciar perito moreno.jpeg" alt="glaciar" class="Glaciar" >
+         <img src="imagenes/Fotos carrousel-index/glaciar perito moreno.jpeg" alt="glaciar" class="Glaciar" >
          <h5>Glaciar perito moreno, Argentina</h5>
     </div>
 
     <div class="contendor-img1">
-         <img src="imagenes/Cerro Fitz Roy o Chaltén (Provincia de Santa Cruz, Argentina).jpeg" alt="chalten" class="chalten" >
+         <img src="imagenes/Fotos carrousel-index/Cerro Fitz Roy o Chaltén (Provincia de Santa Cruz, Argentina).jpeg" alt="chalten" class="chalten" >
          <h5>El chalten, Argentina</h5>
    </div>
 
@@ -116,7 +116,7 @@
 </footer>
 
 
-<script src="contactanos.js"></script>
+<script src="app.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
 integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
