--- a/contactanos.html
+++ b/contactanos.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="contactanos.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="icon" href="imagenes/icons8-argentina-48.png">
+    <link rel="icon" href="imagenes/iconos/icons8-argentina-48.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,500;1,500&family=Titan+One&display=swap" rel="stylesheet">
@@ -21,7 +21,7 @@
 <body>
   
 <header class="header">
-    <img src="imagenes/icons8-circular-argentina-48.png" alt="icon" class="logo-container">
+    <img src="imagenes/iconos/icons8-circular-argentina-48.png" alt="icon" class="logo-container">
 
 
     <button id="abrir" class="abrir-menu">
@@ -71,16 +71,16 @@
         </nav>
 
         <div class="row align-items-center">
-            <div class="container-mail col-md-4"><img src="imagenes/icons8-correo-25.png" alt="mail"> 
+            <div class="container-mail col-md-4"><img src="imagenes/iconos/icons8-correo-25.png" alt="mail"> 
                 <h4 class="item-padre">Escribenos a</h4>
                 <p class="item-hijo">viaja@argentinaturismo.com</p>
             </div> 
-            <div class="container-pagina col-md-4"><img src="imagenes/icons8-monitor-25.png" alt="monitor">
+            <div class="container-pagina col-md-4"><img src="imagenes/iconos/icons8-monitor-25.png" alt="monitor">
                 <h4 class="item-padre">Contacto por la pagina web</h4>
                 <p class="item-hijo">Si lo prefiere puede rellenar el formulario de contacto y le contestaremos por email.</p>
             </div>
 
-            <div class="container-telefono col-md-4"><img src="imagenes/icons8-featurephone-32.png" alt="telefono"> 
+            <div class="container-telefono col-md-4"><img src="imagenes/iconos/icons8-featurephone-32.png" alt="telefono"> 
                 <h4 class="item-padre">Horarios de atencion</h4>
                 <p class="item-hijo">Luneas a viernes de 8am a 6pm</p>
             </div>
@@ -133,7 +133,7 @@
 </footer>
 
 
-<script src="contactanos.js"></script>
+<script src="app.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" 
 integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
